[tool.poetry]
name = "math-multi-agent"
version = "0.1.0"
description = "Math Multi Agent"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
openai = "1.14.2"
numpy = "1.26.4"
scipy = "1.12.0"
pandas = "2.2.1"
sympy = "1.12"
statsmodels = "0.14.1"
scikit-learn = "1.4.1.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 