[project]
name = "math-multi-agent"
version = "0.1.0"
description = "Math Multi Agent"
authors = [
    {name = "Author", email = "x@email.com"}
]
readme = "readme.md"
package-mode = false
requires-python = ">=3.10, <4.0"

[poetry.dependencies]
openai = "^1.68.2"
numpy = "1.26.4"
scipy = "1.12.0"
pandas = "2.2.1"
sympy = "1.12"
statsmodels = "0.14.1"
scikit-learn = "1.4.1.post1"
requests = "^2.32.3"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 